WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190941
[JSC] havingABadTimeWatchpoint is not required in Array#indexOf optimization
https://bugs.webkit.org/show_bug.cgi?id=190941
Summary
[JSC] havingABadTimeWatchpoint is not required in Array#indexOf optimization
Yusuke Suzuki
Reported
2018-10-25 20:16:52 PDT
[JSC] havingABadTimeWatchpoint is not required in Array#indexOf optimization
Attachments
Patch
(5.60 KB, patch)
2018-10-25 20:19 PDT
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2018-10-25 20:19:59 PDT
Created
attachment 353150
[details]
Patch
Yusuke Suzuki
Comment 2
2018-10-26 00:57:01 PDT
Committed
r237447
: <
https://trac.webkit.org/changeset/237447
>
Radar WebKit Bug Importer
Comment 3
2018-10-26 00:57:38 PDT
<
rdar://problem/45580856
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug